# appsflyer-to-analytics-db

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: appsflyer-alert@.service  appsflyer-daily.service  appsflyer-daily.timer  appsflyer.env.example
deploy/user-level/: appsflyer-alert@.service  appsflyer-daily.service  appsflyer-daily.timer
docs/: RUNBOOK.md  design-spec.md  reference-scripts-parity.md
docs/superpowers/plans/: 2026-07-08-issue-23-dedup-key-guard.md  2026-07-08-issues-11-12-13-bugfixes.md  2026-07-08-issues-14-16-batch-b.md  2026-07-08-issues-15-17-hygiene.md  2026-07-08-issues-8-9-fixes.md  2026-07-09-issue-26-empty-response-guard.md  2026-07-09-issues-27-28-29-fixes.md  2026-07-10-issue-55-is-primary-attribution-column.md
docs/superpowers/specs/: 2026-07-08-dedup-key-guard-design.md  2026-07-08-issues-11-12-13-design.md  2026-07-08-issues-14-16-design.md  2026-07-08-issues-15-17-design.md  2026-07-08-issues-8-9-design.md  2026-07-09-issue-26-empty-response-guard-design.md  (+2 more)
scripts/: load_csv.py
sql/: create_table.sql  create_view.sql
sql/migrations/: 2026-07-08-add-id-pk-and-index.sql  2026-07-10-add-is-primary-attribution.sql
src/appsflyer_pipeline/: __init__.py  appsflyer_client.py  cli.py  config.py  loader.py  logging_config.py  pipeline.py  transform.py
tests/: conftest.py  test_appsflyer_client.py  test_cli.py  test_config.py  test_loader.py  test_loader_integration.py  test_pipeline.py  test_smoke.py  test_transform.py
