[project]
name = "appsflyer-pipeline"
version = "0.1.0"
description = "Loads AppsFlyer Pull API (Non-Organic + Retargeting) purchase events into the analytics MariaDB (BAF-2)"
authors = [
    { name = "unreal-kz", email = "ukibas.b@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.42.1",
    "pydantic-settings>=2.14.2",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0",
    "tenacity>=9.1.4",
    "typer>=0.26.8",
]

[project.scripts]
appsflyer-pipeline = "appsflyer_pipeline.cli:app"

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.20",
    "types-pymysql>=1.1.0.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["polars.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=appsflyer_pipeline --cov-report=term-missing"

[tool.coverage.run]
source = ["src/appsflyer_pipeline"]
